yiltc-go-backup/testsuite/negative/missing_let.yilt
fn main()
    x = 42
